--- a/frontend/app/routes/Tela2.css
+++ b/frontend/app/routes/Tela2.css
@@ -1,3 +1,9 @@
+.back-button {
+  display: flex;
+  justify-content: flex-start; /* força ficar à esquerda */
+  margin-top: 20px;
+}
+
 body, html {
   margin: 0;
   padding: 0;
